  05 Nov 2014; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
  pythonpy-9999.ebuild:
  sys-apps/pythonpy: update nightly for distutils

  16 Aug 2014; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
  pythonpy-9999.ebuild:
  sys-apps/pythonpy: allow python3_2

  16 Aug 2014; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
  pythonpy-9999.ebuild:
  sys-apps/pythonpy: another escape bug + unconditional zshcomp

  16 Aug 2014; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
  pythonpy-9999.ebuild:
  sys-apps/pythonpy: fixed quoting fail

*pythonpy-9999 (16 Aug 2014)

  16 Aug 2014; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
  +files/py.bashcomp, +files/py.zshcomp, +metadata.xml, +pythonpy-9999.ebuild:
  sys-apps/pythonpy: new ebuild