@@ -1,0 +1,23 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
+DIST pythonpy-0.3.8.tar.gz 8352 SHA256 b774804c24a9a8c58f39341bfe060344b96c312a89c2eb230c5b979985746f3c SHA512 9c1fab457c3c5265f144767f3b004014b0f64606da7839963d8c2c746daa320675ded022c10077bd05f300bb67225a8562ad1dd5ad337496e7df2e3d8446db3f WHIRLPOOL 97a364be3ae4eb04244e94b51a675001f55309fb4e5bd9409f3d388f00c5e922147782c3eb1f89ca226babb8704b03088de0842711c5a07f887fb269862fd2b5
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iQJ8BAEBCABmBQJU/rbOXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ0NEM5MDM0MjM5MkNDRUI1NUFEQjYyMTIy
+RjA0RTMxRjA3MjAxRTdEAAoJEC8E4x8HIB59MYYP/3sSuRPZHTpLaRqfBXCt43jR
+CXe0umkkMx3b0pGaQPZ7uX1U470lKIir6G/gEsnoq0y7WNetRZ3zNI5H8dS1Vaou
+1atMSBtCb8to+qNVlXXzEO7d9MF4L/VKmZmMYkzPiYSdYQqg59mH4q5QgBxCsB1j
+ogtbA6VSkhlSSdRRKOJya+EGXC7xsHgBkcjcXqC5+q9JqisdQTShH3EPIB0bfJNu
+6afhqwGNdUf7lU/RoKJMrxpsyv7lFdSvmzbZwzbo+Fu+3a4VPyxK71ab7tWzolPy
+C4/lixPl1IrLa0dJF4kZ+3R0dUouDy7GCoSHHknZ5Ukw7NKQQMnFo/OCgVdF03pW
+1Eiqx8e9bHEzI+opNyTbPyBn33vGDEIJx4AI+4P2Y8awdqAnBEHFrpUlXEZSL43F
+pdMe30X7HVU5fc0MDu2yMx5IJI/nPKkyeHzHPc0mP06tuFZN1q/0IwSbXIZylT8m
+L0Z9jY0G/TEYdoC2/hL1wD3CYBKt3a4Rl4uEcKhBP4UY1g0/mJKEB8S3UgE15Bpx
+4hDTMAPCukFRg0WezyeWoinzoeyIBypmPC0nFj08flZcxEiWuzbSviHs+dcvD00I
+zMotleXXZNyejIGhQACI8SQcwVBA4jFvSh1mg/P3RnDKtetcYXhvEMuQsHgUpfLp
+2MH7+nM79Mv32VnXJGXh
+=w1/c
+-----END PGP SIGNATURE-----
